fix horizontal scroll

--- a/CSS/testpackages.css
+++ b/CSS/testpackages.css
@@ -769,6 +769,7 @@
   flex-direction: column;
   align-items: center;
   padding: 140px 20px 20px 20px;
+  overflow: hidden;
 }
 
 .our_team_wrapper .about-title {
@@ -1342,15 +1343,10 @@
   align-items: center;
 }
 
-.info_subheader,
-.info_journey,
-.info_fight {
+.info_container_fluid {
   max-width: 1000px;
+  padding: 0 20px 40px;
   margin: 0 auto;
-}
-
-.info_fight {
-  padding-bottom: 40px;
 }
 
 .info_header h1 {
